# daniel-avila-coding-sample-rag

./: Makefile  README.md  docker-compose.yaml  haystack_test.py  pyproject.toml  rag_test.py
src/: setup.py
src/config/: config.yaml
src/envs/: .env.example
src/query_engines/: base_engine.py  basic_engine.py  engine_factory.py  hierarchical_engine.py  sentence_window_engine.py
src/testers/: base_tester.py  needle_tester.py  rag_tester.py
src/utils/: docs.py
